09 Oct 2006 coudercd
 * recovered shared library support from my broken laptop which died 2
   seconds after the stuff was completed.
 * added missing file lang.c in the previous commit.

07 Oct 2006 coudercd
 * lib checking was broken in a previous commit, it is now fixed.

06 Oct 2006 coudercd
 * fixed coredumps in pmk_check_config() and pmk_check_pkg_config() due
   to missing initialization of the codebuild structure.

28 Sep 2006 coudercd
 * better management of the template files, now pmkscan can process
   them in only one pass.

24 Sep 2006 coudercd
 * started simplification and automatization of makefile template's targets.

23 Sep 2006 coudercd
 * removed obsolete command line options of pmkscan.
 * updated pmkscan and scanfile man pages.

22 Sep 2006 coudercd
 * import large chunk of code for better support of shared library.
 * fixed format of c++ suffix in generated makefile.

14 Sep 2006 coudercd
 * fixed CPUID checking for X86 32 bits CPUs, noticed by Leslie Polzer.

05 Sep 2006 coudercd
 * updated values for compiler detection in SETTINGS to sync with pmk.

# snapshot 20060902

01 Sep 2006 coudercd
 * fixed a regression in rev. 102 that prevented from generating a
   complete pmkfile (header and library checks were missing).

17 Aug 2006 coudercd
 * rewritten compiler detection for shared lib support.
 * improved shared lib support verification.

03 Aug 2006 coudercd
 * much mode #defines in compiler detection module.

15 Jul 2006 coudercd
 * a long time since the last commit but had no feeling to work on pmk until
 last days. Here is some cleanup and the latest work done.

# snapshot 20060319

19 Mar 2006 coudercd
 * import latest work on library support (both static and dynamic).

07 Mar 2006 coudercd
 * improved a bit the makefile generation before completing library
   generation support.

01 Mar 2006 coudercd
 * still going on with library handling. Result is still not useable yet