@@ -1,3 +1,7 @@
+10 Oct 2006 coudercd
+ * reimplemented binary targets in makefile template generated by
+   pmkscan to follow the same behavior as for libraries.
+
 09 Oct 2006 coudercd
  * recovered shared library support from my broken laptop which died 2
    seconds after the stuff was completed.
